fix: adjust swagger route
