# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/login": {
+        "/api/login": {
             "post": {
                 "description": "Authenticate user and return JWT token",
                 "consumes": [
@@ -52,7 +52,7 @@
                 }
             }
         },
-        "/profile": {
+        "/api/profile": {
             "get": {
                 "description": "Get user profile information",
                 "produces": [
@@ -69,7 +69,7 @@
                 }
             }
         },
-        "/users": {
+        "/api/users": {
             "get": {
                 "description": "Retrieve a list of users with pagination, filtering, and sorting",
                 "produces": [
@@ -153,6 +153,12 @@
                             "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -162,7 +168,7 @@
                 }
             }
         },
-        "/users/{id}": {
+        "/api/users/{id}": {
             "get": {
                 "description": "Retrieve a user by their ID",
                 "produces": [
