# internal/routes/routes.go
@@ -26,14 +26,24 @@ func InitializeRoutes(app *fiber.App, db *gorm.DB, cfg *config.Config) {
 	api.Get("/profile", middleware.JWTProtected(cfg.App.JWTSecret), handler.Profile)
 
 	// Group untuk route user yang membutuhkan autentikasi dan otorisasi admin
-	userRoutes := api.Group("/users", middleware.JWTProtected(cfg.App.JWTSecret))
+	// userRoutes := api.Group("/users", middleware.JWTProtected(cfg.App.JWTSecret))
 
-	// Routes untuk User dengan akses role admin
-	userRoutes.Get("/", middleware.RequireRole("superadmin"), userHandler.GetAllUsers)
-	userRoutes.Get("/:id", middleware.RequireRole("superadmin"), userHandler.GetUserByID)
-	userRoutes.Post("/", middleware.RequireRole("superadmin"), userHandler.CreateUser)
-	userRoutes.Put("/:id", middleware.RequireRole("superadmin"), userHandler.UpdateUser)
-	userRoutes.Delete("/:id", middleware.RequireRole("superadmin"), userHandler.DeleteUser)
+	//routes untuk testing tanpa middleware
+	userRoutes := api.Group("/users")
+
+	// {Jangan Dihapus} Routes untuk User dengan akses role admin
+	// userRoutes.Get("/", middleware.RequireRole("superadmin"), userHandler.GetAllUsers)
+	// userRoutes.Get("/:id", middleware.RequireRole("superadmin"), userHandler.GetUserByID)
+	// userRoutes.Post("/", middleware.RequireRole("superadmin"), userHandler.CreateUser)
+	// userRoutes.Put("/:id", middleware.RequireRole("superadmin"), userHandler.UpdateUser)
+	// userRoutes.Delete("/:id", middleware.RequireRole("superadmin"), userHandler.DeleteUser)
+
+	// routes tanpa middleware
+	userRoutes.Get("/", userHandler.GetAllUsers)
+	userRoutes.Get("/:id", userHandler.GetUserByID)
+	userRoutes.Post("/", userHandler.CreateUser)
+	userRoutes.Put("/:id", userHandler.UpdateUser)
+	userRoutes.Delete("/:id", userHandler.DeleteUser)
 
 	// Jika Anda ingin menggunakan permission-based access di masa depan:
 	// userRoutes.Get("/:id", middleware.RequirePermission("view_user", userService), userHandler.GetUserByID)
